--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@roxi/routify": "^2.5.1-next-major",
     "autoprefixer": "^10.1.0",
     "cross-env": "^7.0.2",
